# bytelock

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  crypto.rs  main.rs  ui.rs  vault.rs
src/commands/: add.rs  gen_pw.rs  get.rs  init.rs  list.rs  mod.rs  passwd.rs  remove.rs  update.rs
