[package]
name = "bytelock"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
password-hash = "0.5"
zeroize = "1.7"
rpassword = "7.3"
chacha20poly1305 = "0.10"
base64 = "0.22"