[package]
name = "bytelock"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rpassword = "7.0"
argon2 = "0.4"
chacha20poly1305 = "0.10"
zeroize = "1.5"
password-hash = "0.4"
clipboard = "0.5"   # cross-platform clipboard (ClipboardProvider)
serde_json = "1.0.145"
